[tool.poetry]
name = "beatport-to-tidal"
version = "0.0.1"
description = ""
authors = ["Aaron Mamparo <aaronmamparo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fake-useragent = "^1.4.0"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
ujson = "^5.9.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"
aws-wsgi = "^0.2.7"
boto3 = "^1.34.9"
injector = "^0.21.0"
flask-injector = "^0.15.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pylint-quotes = "^0.2.3"
aws-cdk-lib = "^2.116.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
